front-End improvement

--- a/CitelProject.MVC/Views/Categories/Details.cshtml
+++ b/CitelProject.MVC/Views/Categories/Details.cshtml
@@ -5,31 +5,58 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
-
-<div>
-    <h4>CategoryViewModel</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-    </dl>
+<div class="row">
+    <div class="navbar navbar-default bootstrap-admin-navbar-thin">
+        <ol class="breadcrumb bootstrap-admin-breadcrumb">
+            <li>
+                <a href="@Url.Action("Index","Home")">Início</a>
+            </li>
+            <li>
+                <a href="@Url.Action("Index","Categories")">Categorias</a>
+            </li>
+            <li class="active">Detalhes</li>
+        </ol>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.CategoryID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
+
+<div class="row">
+    <div class="panel panel-default bootstrap-admin-no-table-panel">
+        <div class="panel-heading">
+            <div class="text-muted bootstrap-admin-box-title">Detalhes da Categoria</div>
+        </div>
+        <div class="bootstrap-admin-no-table-panel-content bootstrap-admin-panel-content collapse in">
+            <form class="form-horizontal">
+                <fieldset>
+                    <legend>Categoria</legend>
+                    <div>
+                        <dl class="dl-horizontal">
+                            <dt>
+                                @Html.DisplayNameFor(model => model.Name)
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.Name)
+                            </dd>
+
+                            <dt>
+                                @Html.DisplayNameFor(model => model.Description)
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.Description)
+                            </dd>
+
+                        </dl>
+                    </div>
+                    <p>
+                        @Html.ActionLink("Editar", "Edit", new { id = Model.CategoryID }, new { @class = "btn btn-primary" })
+                        @Html.ActionLink("Voltar", "Index", new { }, new { @class = "btn btn-default" })
+                    </p>
+                </fieldset>
+            </form>
+        </div>
+    </div>
+</div>
+
+
