--- a/CitelProject.MVC/Views/Home/Index.cshtml
+++ b/CitelProject.MVC/Views/Home/Index.cshtml
@@ -2,10 +2,10 @@
     ViewBag.Title = "Página Inicial";
 }
 
-<div class="jumbotron" style="margin-top:0px;padding-top:0px;">
-    <h1>Prova Citel</h1>
-    <p class="lead">Prova técnica para Citel Softwares.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="jumbotron" style="margin-top:0px;padding-top:20px;">
+    <h1 style="margin-top:0px;">Prova Citel</h1>
+    <p class="lead">Prova técnica para o processo seletivo da Citel Softwares.</p>
+    @*<p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>*@
 </div>
 
 <div class="row">
