--- a/CitelProject.MVC/Views/Shared/_Layout.cshtml
+++ b/CitelProject.MVC/Views/Shared/_Layout.cshtml
@@ -7,6 +7,15 @@
     @Styles.Render("~/Content/Theme")
     @Styles.Render("~/Content/Vendors")
     @Scripts.Render("~/bundles/modernizr")
+
+    <style>
+        body.bootstrap-admin-with-small-navbar {
+            padding-top: 60px;
+        }
+        h2{
+            margin-top:0;
+        }
+    </style>
 </head>
 <body class="bootstrap-admin-with-small-navbar">
 
