--- a/CitelProject.MVC/Views/Categories/Index.cshtml
+++ b/CitelProject.MVC/Views/Categories/Index.cshtml
@@ -5,10 +5,22 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<div class="row">
+    <div class="navbar navbar-default bootstrap-admin-navbar-thin">
+        <ol class="breadcrumb bootstrap-admin-breadcrumb">
+            <li>
+                <a href="@Url.Action("Index","Home")">Início</a>
+            </li>
+            <li class="active">Categorias</li>
+        </ol>
+    </div>
+</div>
+
+<h2>Categorias</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <a href="@Url.Action("Create")" class="btn btn-success"><i class="glyphicon glyphicon-pencil glyphicon-white"></i> Criar Nova</a>
+    
 </p>
 <table class="table">
     <tr>
@@ -30,9 +42,9 @@
             @Html.DisplayFor(modelItem => item.Description)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.CategoryID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.CategoryID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.CategoryID })
+            @Html.ActionLink("Editar", "Edit", new { id=item.CategoryID },new { @class = "btn btn-primary" }) 
+            @Html.ActionLink("Detalhes", "Details", new { id=item.CategoryID }, new { @class = "btn btn-default" }) 
+            @Html.ActionLink("Deletar", "Delete", new { id=item.CategoryID }, new { @class = "btn btn-danger" })
         </td>
     </tr>
 }
