--- a/CitelProject.MVC/Views/Products/Delete.cshtml
+++ b/CitelProject.MVC/Views/Products/Delete.cshtml
@@ -5,53 +5,89 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>ProductViewModel</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Value)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Value)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CategoryID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CategoryID)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+<div class="row">
+    <div class="navbar navbar-default bootstrap-admin-navbar-thin">
+        <ol class="breadcrumb bootstrap-admin-breadcrumb">
+            <li>
+                <a href="@Url.Action("Index","Home")">Início</a>
+            </li>
+            <li>
+                <a href="@Url.Action("Index","Categories")">Categorias</a>
+            </li>
+            <li class="active">Apagar</li>
+        </ol>
+    </div>
 </div>
+
+<div class="row">
+    <div class="alert alert-warning">
+        @*<a class="close" data-dismiss="alert" href="#">&times;</a>*@
+        <h4>Atenção!</h4>
+        Você tem certeza que deseja deletar?
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="panel panel-default bootstrap-admin-no-table-panel">
+        <div class="panel-heading">
+            <div class="text-muted bootstrap-admin-box-title">Apagar Produto</div>
+        </div>
+        <div class="bootstrap-admin-no-table-panel-content bootstrap-admin-panel-content collapse in">
+            <form class="form-horizontal">
+                <fieldset>
+                    <legend>Produto</legend>
+                    <div>
+                        <dl class="dl-horizontal">
+                            <dt>
+                                @Html.DisplayNameFor(model => model.Name)
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.Name)
+                            </dd>
+
+                            <dt>
+                                @Html.DisplayNameFor(model => model.Description)
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.Description)
+                            </dd>
+
+                            <dt>
+                                @Html.DisplayNameFor(model => model.Value)
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.Value)
+                            </dd>
+
+                            <dt>
+                                @Html.DisplayNameFor(model => model.CategoryID)
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.CategoryID)
+                            </dd>
+
+                        </dl>
+
+                        @using (Html.BeginForm())
+                        {
+                            @Html.AntiForgeryToken()
+
+                            <div class="form-actions no-color">
+                                <input type="submit" value="Deletar" class="btn btn-warning" />
+                                @Html.ActionLink("Voltar", "Index", new { }, new { @class = "btn btn-default" })
+                            </div>
+                        }
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+    </div>
+</div>
+
