fix delete form

--- a/CitelProject.MVC/Views/Products/Index.cshtml
+++ b/CitelProject.MVC/Views/Products/Index.cshtml
@@ -19,7 +19,7 @@
 <h2>Produtos</h2>
 
 <p>
-    <a href="@Url.Action("Create")" class="btn btn-success"><i class="glyphicon glyphicon-pencil glyphicon-white"></i> Criar Novo</a>
+    <a href="@Url.Action("Create")" class="btn btn-success"><i class="glyphicon glyphicon-pencil glyphicon-white"></i> Criar Produto</a>
 
 </p>
 <table class="table">
