--- a/CitelProject.MVC/Views/Categories/Index.cshtml
+++ b/CitelProject.MVC/Views/Categories/Index.cshtml
@@ -16,10 +16,8 @@
     </div>
 </div>
 
-<h2>Categorias</h2>
-
 <p>
-    <a href="@Url.Action("Create")" class="btn btn-success"><i class="glyphicon glyphicon-pencil glyphicon-white"></i> Criar Nova</a>
+    <a href="@Url.Action("Create")" class="btn btn-success"><i class="glyphicon glyphicon-pencil glyphicon-white"></i> Criar Categoria</a>
     
 </p>
 <table class="table">
