remove unused views

--- a/CitelProject.MVC/Views/Home/Index.cshtml
+++ b/CitelProject.MVC/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
         <p>
             <ul>
                 <li>AspNet MVC C#</li>
-                <li>WEB API</li>
+                <li>WEB API + Swagger</li>
                 <li>Arquitetura DDD</li>
             </ul>
         </p>
